# bit-voxel

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/models/: TestBot.iqm  lowPolyGirl.iqm  test.iqm
assets/shaders/: FillRectangle.frag  FillRectangle.vs  Final.frag  Final.vs  PhongMesh.frag  PhongMesh.vs  Simple3dColor.frag  Simple3dColor.vertex  SimpleBlit.frag  SimpleBlit.vs  SimpleMesh.frag  SimpleMesh.vs
src/: IQM.hpp  array.hpp  assets.cpp  assets.hpp  camera.cpp  camera.hpp  game.cpp  game.hpp  intrinics.cpp  intrinsics.cpp  mesh.cpp  mesh.hpp  meshes.hpp  model.hpp  platform_sdl.cpp  renderer.cpp  renderer.hpp  sAssert.hpp  sMath.cpp  sMath.hpp  shared.cpp  shared.hpp  sync.hpp  textures.hpp  ui.cpp  ui.hpp  voxel.cpp  voxel.hpp
